--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="https://danielthezebra.github.io/Info/">Home</a></li>
+	        	<li><a href="pages/about.html">About</a></li>
+        		<li><a href="pages/cv.html">CV</a></li>
+        		<!--><li><a href="/blog">Blog</a></li><!-->
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Daniel!</h1>
+        		<!--><h1>Hi there, I'm Daniel!</h1><!-->
 				<p>This is where I will publish updates. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
