--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<!--><h1>Hi there, I'm Daniel!</h1><!-->
-				<p>This is where I will publish updates. <a href="/about">Read more about my life...</a></p>
+				<p>This is where I will publish updates. <a href="pages/about.html">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
