--- a/pages/about.html
+++ b/pages/about.html
@@ -3,21 +3,21 @@
 	<head>
 		<title>Daniel Carvalho</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="/../css/main.css">
 	</head>
 	<body>
 		<nav>
     		<ul>
         		<li><a href="https://danielthezebra.github.io/Info/">Home</a></li>
-	        	<li><a href="pages/about.html">About</a></li>
-        		<li><a href="pages/cv.html">CV</a></li>
+	        	<li><a href="about.html">About</a></li>
+        		<li><a href="cv.html">CV</a></li>
         		<!--><li><a href="/blog">Blog</a></li><!-->
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Daniel!</h1>
-				<p>This is where I will publish updates. <a href="pages/about">Read more about my life...</a></p>
+				<p>This is where I will publish updates.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
