--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="https://danielthezebra.github.io/Info/">Home</a></li>
+        		<li><img href="assets/images/OpticsLab.jpg"></li>
+				<li><a href="https://danielthezebra.github.io/Info/">Home</a></li>
 	        	<li><a href="pages/about.html">About</a></li>
         		<li><a href="pages/cv.html">CV</a></li>
         		<!--><li><a href="/blog">Blog</a></li><!-->
