--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><img href="assets/images/OpticsLab.jpg"></li>
+        		<li><img href="assets/images/OpticsLab.jpg" height="97px" width="200"></li>
 				<li><a href="https://danielthezebra.github.io/Info/">Home</a></li>
 	        	<li><a href="pages/about.html">About</a></li>
         		<li><a href="pages/cv.html">CV</a></li>
