--- a/pages/about.html
+++ b/pages/about.html
@@ -8,10 +8,9 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="https://danielthezebra.github.io/Info/">Home</a></li>
+        		<li><a href="../index.html">Home</a></li>
 	        	<li><a href="about.html">About</a></li>
         		<li><a href="cv.html">CV</a></li>
-        		<!--><li><a href="/blog">Blog</a></li><!-->
     		</ul>
 		</nav>
 		<div class="container">
