--- a/pages/cv.html
+++ b/pages/cv.html
@@ -3,15 +3,14 @@
 	<head>
 		<title>Daniel Carvalho</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/../css/main.css">
+		<link rel="stylesheet" type="text/css" href="../css/main.css">
 	</head>
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="https://danielthezebra.github.io/Info/">Home</a></li>
+        		<li><a href="../index.html">Home</a></li>
 	        	<li><a href="about.html">About</a></li>
         		<li><a href="cv.html">CV</a></li>
-        		<!--><li><a href="/blog">Blog</a></li><!-->
     		</ul>
 		</nav>
 		<div class="container">
