--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,7 @@
 	<body>
 		<nav>
     		<ul>
+				<li><img href="assets/images/me2crop.jpg" height="111px" width="200"></li>
         		<li><a href="../index.html">Home</a></li>
 	        	<li><a href="about.html">About</a></li>
         		<li><a href="cv.html">CV</a></li>
