fixed picture links

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><img href="assets/images/OpticsLab.jpg" height="97px" width="200"></li>
-				<li><a href="https://danielthezebra.github.io/Info/">Home</a></li>
+        		<li><img src="assets/images/OpticsLab.jpg" height="97px" width="200"></li>
+				<li><a href="index.html">Home</a></li>
 	        	<li><a href="pages/about.html">About</a></li>
         		<li><a href="pages/cv.html">CV</a></li>
     		</ul>
