--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	</head>
 	<body>
 		<nav>
+			<ul>
+				<li><img src="assets/images/OpticsLab.jpg" height="194px" width="400px"></li>
+			</ul>
     		<ul>
-        		<li><img src="assets/images/OpticsLab.jpg" height="97px" width="200"></li>
 				<li><a href="index.html">Home</a></li>
 	        	<li><a href="pages/about.html">About</a></li>
         		<li><a href="pages/cv.html">CV</a></li>
