--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 				<li><a href="index.html">Home</a></li>
 	        	<li><a href="pages/about.html">About</a></li>
         		<li><a href="pages/cv.html">CV</a></li>
+				<li><a href="pages/references.html">References</a></li>
     		</ul>
 		</nav>
 		<div class="container">
