--- a/pages/cv.html
+++ b/pages/cv.html
@@ -11,6 +11,7 @@
         		<li><a href="../index.html">Home</a></li>
 	        	<li><a href="about.html">About</a></li>
         		<li><a href="cv.html">CV</a></li>
+				<li><a href="references.html">References</a></li
     		</ul>
 		</nav>
 		<div class="container">
