--- a/pages/references.html
+++ b/pages/references.html
@@ -17,8 +17,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Daniel!</h1>
-				<p>This is where I will publish updates.</p>
+				<h2>Here are some helpful links</h2>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
