--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Daniel!</h1>
-				<p>This is where I will publish updates.</p>
+				<p>I am an undergraduate physics student and researcher. This site is a collection of some neat things.
+				<br> It is a work in progress.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
