--- a/pages/references.html
+++ b/pages/references.html
@@ -16,10 +16,15 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-				<h2>Here are some helpful links</h2>
+				<h2>Here are some helpful academic resource links</h2>
 				<p> <a href="http://hyperphysics.phy-astr.gsu.edu/hbase/hph.html">Hyper Physics by Georgia State University</a> has summaries covering a large variety of physics topics graphically connected in an idea-web.
-				<br><br> <a href="https://www.ocf.berkeley.edu/~abhishek/chicphys.htm">Here Chicago's Undergrad Physics Bibliography</a> and also the <a href="https://www.ocf.berkeley.edu/~abhishek/chicmath.htm">Mathematics counterpart</a>. Here you will find some great literature suggestions.
-				<br><br> Here is a google drive full of <a href="https://drive.google.com/drive/folders/0B9XbEQh3jB9pbzhEX3J0dkhSTTg?usp=sharing">Advanced Physics textbooks</a> and another for<a href="https://drive.google.com/drive/folders/0B9XbEQh3jB9pNkhSVzVoYmRtTHM?usp=sharing"> Advanced Mathematics textbooks</a>. They also have recently added<a href="https://drive.google.com/drive/folders/0B9XbEQh3jB9pWVBFX0hqTzA0dUU?usp=sharing"> Computer Science and Programming</a>, <a href="https://drive.google.com/drive/folders/0B9XbEQh3jB9pMlRwbC11MjZRYk0?usp=sharing">Mathematics and Science books</a>, and <a href="https://drive.google.com/drive/folders/1l4hjiSgO1hTbaQjt9IG1wxQxNi7JtjYE?usp=sharing">Philosophy and History of Science and Mathematcs and Pedagody books</a>. 
+				<br><br> <a href="https://www.ocf.berkeley.edu/~abhishek/chicphys.htm">Here Chicago's Undergraduate Physics Bibliography</a> and also the <a href="https://www.ocf.berkeley.edu/~abhishek/chicmath.htm">Mathematics counterpart</a>. Here you will find some great literature suggestions.
+				<br><br> Here are google drives full of 
+				<br><a href="https://drive.google.com/drive/folders/0B9XbEQh3jB9pbzhEX3J0dkhSTTg?usp=sharing">Advanced Physics textbooks</a> 
+				<br><a href="https://drive.google.com/drive/folders/0B9XbEQh3jB9pNkhSVzVoYmRtTHM?usp=sharing"> Advanced Mathematics textbooks</a>
+				<br><a href="https://drive.google.com/drive/folders/0B9XbEQh3jB9pWVBFX0hqTzA0dUU?usp=sharing"> Computer Science and Programming textbooks</a>
+				<br><a href="https://drive.google.com/drive/folders/0B9XbEQh3jB9pMlRwbC11MjZRYk0?usp=sharing">Mathematics and Science books</a>
+				<br><a href="https://drive.google.com/drive/folders/1l4hjiSgO1hTbaQjt9IG1wxQxNi7JtjYE?usp=sharing">Philosophy and History of Science and Mathematcs and Pedagody books</a>
 				<br>These drives are so full of texts that you cannot find the bottom of the page. The creator, <a href="mailto:MPmathphysicsbooks@gmail.com">MPmathphysicsbooks@gmail.com</a> does take book requests too.
 				</p>
 			</div><!-- /.blurb -->
