--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Daniel Carvalho</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<!-- LinkedIn Script -->
+		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 	</head>
 	<body>
 		<nav>
@@ -20,6 +22,9 @@
 		<div class="container">
     		<div class="blurb">
 				<p>This is where I will publish updates. <a href="pages/about.html">Read more about my life...</a></p>
+				<!-- LinkedIn Widget -->
+				<p><div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="danielcarvalho094"><a class="LI-simple-link" href='https://www.linkedin.com/in/danielcarvalho094?trk=profile-badge'>Daniel Carvalho</a></div></p>
+			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
