--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<ul>
 			<li>
 				<!-- LinkedIn Widget -->
-				<p><div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="danielcarvalho094"><a class="LI-simple-link" href='https://www.linkedin.com/in/danielcarvalho094?trk=profile-badge'>Daniel Carvalho</a></div></p>
+				<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="danielcarvalho094"><a class="LI-simple-link" href='https://www.linkedin.com/in/danielcarvalho094?trk=profile-badge'>Daniel Carvalho</a></div>
 			</li>
 		</ul>
 		</footer>
